# arc-consistency

./: CMakeLists.txt  README.md
include/: arc_consistency.hpp  constraint.hpp  var.hpp
src/: arc_consistency.cpp  constraint.cpp  var.cpp
tests/: CMakeLists.txt  test_arc_consistency.cpp
