add_executable(arc_consistency_lib_tests test_arc_consistency.cpp)
add_dependencies(arc_consistency_lib_tests ArcConsistency)
target_link_libraries(arc_consistency_lib_tests PRIVATE ArcConsistency)
setup_sanitizers(arc_consistency_lib_tests)

add_test(NAME ArcConsistency_LibTest COMMAND arc_consistency_lib_tests WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
